# deep-search

./: .env.sample  .envrc.sample  .gitignore  README.md  blacklist.json  data.json  deep-search.py  do_test.py  final.py  final.tsv  justfile  processed.py  processing.py  pyproject.toml  requirements.txt
cache/: readme.md
src/: deep_search.py
src/deep_search/: deep_search.py
tests/: test_search.py  tests.py
