[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.3"
name = "deep-search"
description = "Python library for eliminating common urls among different search queries and fetch better results"
readme = "README.md"
authors = [
  { name="Mittal Analytics Pvt Ltd", email="pratyush@hey.com" },
]
dependencies = [
  "google-api-python-client"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "build", "twine"]

[project.urls]
"Homepage" = "https://github.com/Mittal-Analytics/deep-search"

[tool.bumpver]
current_version = "0.1.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]